fix: Fixed height overlap

--- a/src/styles/chatStyle.scss
+++ b/src/styles/chatStyle.scss
@@ -1,3 +1,9 @@
+html {
+  height: --webkit-fill-available;
+}
+body {
+  height: --webkit-fill-available;
+}
 .sms {
   display: flex;
   flex-direction: column;
